[package]
name = "aquapi"
version = "0.1.0"
authors = ["Philippe Bouamriou <pbouamriou@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
i2cdev = "0.4.4"
docopt = "1"
serde = { version = "1", features = ["derive"] }
crc8 = "0.1"
